--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -40,6 +40,7 @@ homeassistant/components/asuswrt/* @kennedyshead
 homeassistant/components/atag/* @MatsNL
 homeassistant/components/aten_pe/* @mtdcr
 homeassistant/components/atome/* @baqs
+homeassistant/components/auckland_bin_collection/* @fishy242
 homeassistant/components/august/* @bdraco
 homeassistant/components/aurora_abb_powerone/* @davet2001
 homeassistant/components/auth/* @home-assistant/core
