--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -332,6 +332,7 @@ batinfo==0.4.2
 # homeassistant.components.eddystone_temperature
 # beacontools[scan]==1.2.3
 
+# homeassistant.components.auckland_bin_collection
 # homeassistant.components.scrape
 beautifulsoup4==4.9.1
 
